Fixed clipping of background carousel by modifying z-index on .navbar, resolved white space caused by .navbar, all around, navbar was being a jerk.

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -5,10 +5,8 @@
 
 #landingpage{
 	background: transparent;
-	background-position: 0% 25%;
 	margin-bottom: 0px;
-	margin-top: 60px;
-    background-size: cover;
+	margin-top: 15%;
 	max-width: 100%;
 	height: auto;
 	color: white;
@@ -16,7 +14,9 @@
 	font-family: 'Cormorant+Garamond', sans-serif;
 	text-shadow: black 0.3em 0.3em 0.3em;
 	display: flex;
-  	align-items: center;
+  	justify-content: center;
+  	text-align: center;
+
 }
 
 .jumbotron {
@@ -24,9 +24,10 @@
 	text-shadow: black 0.2em 0.2em 0.2em;
 }
 
-#jumbotext {
-	position: relative;
-	margin-left: 22%;
+
+
+.ziptext {
+	text-align: center;
 }
 
 
@@ -38,9 +39,6 @@
 		width: 400px;
 	}
 	
-	#motto {
-		margin-left: 10%;
-	}
 }
 
 @media screen and (min-width: 1200px) {
@@ -49,8 +47,4 @@
 		font-size:15px;
 		color:black;
 	}
-		#motto {
-		margin-left: 28%;
-	}
 }
-
